--- a/src/components/Meals/Meal/Meal.module.css
+++ b/src/components/Meals/Meal/Meal.module.css
@@ -16,16 +16,20 @@ img {
   width: 100%;
 }
 
+.DescBox {
+  flex: auto;
+}
+
 .Title {
   text-align: left;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 36rem;
   margin: 0;
 }
 
 .Desc {
   color: #bbb;
-  font-size: 14px;
+  font-size: 28rem;
   margin-top: 0;
   padding-right: 40rem;
 }
@@ -39,10 +43,10 @@ img {
 
 .Price {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 36rem;
 }
 
 .Price::before {
   content: '￥';
-  font-size: 12px;
+  font-size: 24rem;
 }
